@@ -15,6 +15,8 @@ Fixed bugs:
 * <path location="loc"> was broken (Regression from beta1).
   Bugzilla report 40547.
 
+* nested fileset in <cab> did not work. Bugzilla report 39439.
+
 Other changes:
 --------------
 
